# bug-resolution-radar

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  app.py  bug-resolution-radar-test.spec  bug-resolution-radar.spec  coverage.xml  pyproject.toml  requirements-dev.txt  requirements.txt  run_api.py  run_desktop.py  run_streamlit.py
.github/workflows/: build-binaries.yml  build-linux.yml  build-macos.yml  build-windows.yml  codeql.yml  coverage.yml  format.yml  quality-gate.yml  release-binaries.yml  typecheck.yml
.streamlit/: config.toml
assets/app_icon/: bug-resolution-radar.desktop  bug-resolution-radar.icns
docs/: ARCHITECTURE.md  CODEBASE.md  INSIGHTS_ENGINE.md  QUALITY.md  THEMING.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
scripts/: check_dead_private_helpers.py  check_docs_references.py  ingest_profile_report.py  update_app_icon.py
src/bug_resolution_radar/: __init__.py  analysis_window.py  config.py  design_tokens.py  insights.py  kpis.py  notes.py  schema.py  schema_helix.py  security.py  source_maintenance.py  status_semantics.py  (+1 more)
tests/: test_analysis_window.py  test_api_app.py  test_architecture_boundaries.py  test_browser_runtime_permissions.py  test_config_page_preferences.py  test_config_page_source_delete_selection.py  test_cookie_session_modes.py  test_cookie_utils.py  test_core_modules.py  test_country_rollup_sources.py  test_dashboard_downloads_csv.py  test_dashboard_issue_scope_filters.py  test_dashboard_performance.py  test_dashboard_snapshot_scope_context.py  test_dashboard_status_insights.py  test_downloads_service.py  test_duplicate_analytics.py  test_duplicates_insights.py  test_executive_report_ppt.py  test_filter_persistence.py  test_filters.py  test_helix_date_ranges.py  test_helix_ingest_session_refresh.py  test_helix_mapper.py  test_helix_official_export.py  test_helix_raw_export.py  test_helix_store_sidecars.py  test_ingest_async_watchdog.py  test_ingest_circuit_breaker.py  test_ingest_page_last_payload.py  test_ingest_page_test_source.py  test_ingest_profiler.py  test_ingest_progress_state.py  test_ingest_runner_incremental_persistence.py  test_ingest_source_selector_state.py  test_insights.py  test_insights_chips_root_cause.py  test_insights_copilot.py  test_insights_engine.py  test_insights_page_scope.py  (+35 more)
(+135 files in other folders)
